--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,31 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.softcaze.memory">
 
+    <!-- Include required permissions for Google Mobile Ads to run. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".activity.MainMenuActivity">
+        android:theme="@android:style/Theme.Black.NoTitleBar">
+        <activity android:name=".activity.MainMenuActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ShopActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.LevelListActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ChallengeActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.GameModeActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.GameActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.HeaderActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.FooterActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SplachScreenActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ShopActivity" />
-        <activity android:name=".activity.LevelListActivity" />
-        <activity android:name=".activity.ChallengeActivity" />
-        <activity android:name=".activity.GameModeActivity" />
-        <activity android:name=".activity.GameActivity" />
-        <activity android:name=".activity.HeaderActivity" />
-        <activity android:name=".activity.FooterActivity" />
-        <activity android:name=".activity.SplachScreenActivity" />
-        <activity android:name=".activity.BackgroundActivity" />
-        <activity android:name=".activity.SettingActivity" />
-        <activity android:name=".activity.TutorialActivity"></activity>
+        <activity android:name=".activity.BackgroundActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SettingActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.TutorialActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ContactFormActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
